Fix saltos de línea para archivos .bat con CRLF

--- a/backendpelu/src/main/resources/application.properties
+++ b/backendpelu/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.application.name=backendpelu
+# Conexión a MySQL en Docker (puerto 3307)
+spring.datasource.url=jdbc:mysql://localhost:3307/peluqueria?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=pelu
+spring.datasource.password=pelu123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Puerto del backend
 server.port=8080
