--- a/backendpelu/.gitignore
+++ b/backendpelu/.gitignore
@@ -28,6 +28,8 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
 ### VS Code ###
 .vscode/
+# Evitar subir datos de MySQL
+backendpelu/deploy/mysql-data/
+
