con tailwindcss funcionando

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "files": [],
   "references": [
@@ -11,3 +13,5 @@
     { "path": "./tsconfig.node.json" }
   ]
 }
+
+
