--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -6,18 +6,19 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* Bundler mode */
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
+    "noEmit": true,
 
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-
-    "composite": true,
-    "outDir": "dist"
+    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
 }
