--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.3",
     "init": "^0.1.2",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
