--- a/backendpelu/pom.xml
+++ b/backendpelu/pom.xml
@@ -43,7 +43,7 @@
 	<dependency>
 		<groupId>org.mariadb.jdbc</groupId>
 		<artifactId>mariadb-java-client</artifactId>
-		<scope>runtime</scope>
+		<version>3.3.1</version>
 	</dependency>
 
 	<dependency>
