--- a/backendpelu/src/main/resources/application.properties
+++ b/backendpelu/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Conexión a MariaDB en Docker
-spring.datasource.url=jdbc:mysql://localhost:3310/peluqueriaDB?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mariadb://localhost:3310/peluqueriaDB?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=peluqueria
 spring.datasource.password=pswpeluqueria
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
